--- a/css/ie/v8.css
+++ b/css/ie/v8.css
@@ -3,93 +3,94 @@
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
-
 /* Icon */
-
-	.icon.major {
-		border: none;
-	}
-
-		.icon.major:before {
-			font-size: 3em;
-		}
+/* line 15, ../../sass/ie/v8.scss */
+.icon.major {
+  border: none;
+}
+/* line 18, ../../sass/ie/v8.scss */
+.icon.major:before {
+  font-size: 3em;
+}
 
 /* Form */
+/* line 26, ../../sass/ie/v8.scss */
+label {
+  color: #2E3842;
+}
 
-	label {
-		color: #2E3842;
-	}
-
-	input[type="text"],
-	input[type="password"],
-	input[type="email"],
-	select,
-	textarea {
-		border: solid 1px #dfdfdf;
-	}
+/* line 30, ../../sass/ie/v8.scss */
+input[type="text"],
+input[type="password"],
+input[type="email"],
+select,
+textarea {
+  border: solid 1px #dfdfdf;
+}
 
 /* Button */
-
-	input[type="submit"],
-	input[type="reset"],
-	input[type="button"],
-	button,
-	.button {
-		border: solid 2px #dfdfdf;
-	}
-
-		input[type="submit"].special,
-		input[type="reset"].special,
-		input[type="button"].special,
-		button.special,
-		.button.special {
-			border: 0 !important;
-		}
+/* line 40, ../../sass/ie/v8.scss */
+input[type="submit"],
+input[type="reset"],
+input[type="button"],
+button,
+.button {
+  border: solid 2px #dfdfdf;
+}
+/* line 47, ../../sass/ie/v8.scss */
+input[type="submit"].special,
+input[type="reset"].special,
+input[type="button"].special,
+button.special,
+.button.special {
+  border: 0 !important;
+}
 
 /* Page Wrapper + Menu */
+/* line 54, ../../sass/ie/v8.scss */
+#menu {
+  display: none;
+}
 
-	#menu {
-		display: none;
-	}
-
-	body.is-menu-visible #menu {
-		display: block;
-	}
+/* line 59, ../../sass/ie/v8.scss */
+body.is-menu-visible #menu {
+  display: block;
+}
 
 /* Header */
-
-	#header nav > ul > li > a.menuToggle:after {
-		display: none;
-	}
+/* line 72, ../../sass/ie/v8.scss */
+#header nav > ul > li > a.menuToggle:after {
+  display: none;
+}
 
 /* Banner + Wrapper (style4) */
-
-	#banner,
-	.wrapper.style4 {
-		-ms-behavior: url("css/ie/backgroundsize.min.htc");
-	}
-
-		#banner:before,
-		.wrapper.style4:before {
-			display: none;
-		}
+/* line 84, ../../sass/ie/v8.scss */
+#banner,
+.wrapper.style4 {
+  -ms-behavior: url("css/ie/backgroundsize.min.htc");
+}
+/* line 88, ../../sass/ie/v8.scss */
+#banner:before,
+.wrapper.style4:before {
+  display: none;
+}
 
 /* Banner */
-
-	#banner .more {
-		height: 4em;
-	}
-
-		#banner .more:after {
-			display: none;
-		}
+/* line 96, ../../sass/ie/v8.scss */
+#banner .more {
+  height: 4em;
+}
+/* line 99, ../../sass/ie/v8.scss */
+#banner .more:after {
+  display: none;
+}
 
 /* Main */
-
-	#main > header {
-		-ms-behavior: url("css/ie/backgroundsize.min.htc");
-	}
-
-		#main > header:before {
-			display: none;
-		}
+/* line 108, ../../sass/ie/v8.scss */
+#main > header {
+  -ms-behavior: url("css/ie/backgroundsize.min.htc");
+}
+/* line 111, ../../sass/ie/v8.scss */
+#main > header:before {
+  display: none;
+}
