--- a/css/ie/v9.css
+++ b/css/ie/v9.css
@@ -3,123 +3,122 @@
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
-
 /* Spotlight */
-
-	.spotlight {
-		display: block;
-	}
-
-		.spotlight .image {
-			display: inline-block;
-			vertical-align: top;
-		}
-
-		.spotlight .content {
-			padding: 4em 4em 2em 4em;
-			display: inline-block;
-		}
-
-		.spotlight:after {
-			clear: both;
-			content: '';
-			display: block;
-		}
+/* line 14, ../../sass/ie/v9.scss */
+.spotlight {
+  display: block;
+}
+/* line 17, ../../sass/ie/v9.scss */
+.spotlight .image {
+  display: inline-block;
+  vertical-align: top;
+}
+/* line 22, ../../sass/ie/v9.scss */
+.spotlight .content {
+  padding: 4em 4em 2em 4em;
+  display: inline-block;
+}
+/* line 27, ../../sass/ie/v9.scss */
+.spotlight:after {
+  clear: both;
+  content: '';
+  display: block;
+}
 
 /* Features */
-
-	.features {
-		display: block;
-	}
-
-		.features li {
-			float: left;
-		}
-
-		.features:after {
-			content: '';
-			display: block;
-			clear: both;
-		}
+/* line 36, ../../sass/ie/v9.scss */
+.features {
+  display: block;
+}
+/* line 39, ../../sass/ie/v9.scss */
+.features li {
+  float: left;
+}
+/* line 43, ../../sass/ie/v9.scss */
+.features:after {
+  content: '';
+  display: block;
+  clear: both;
+}
 
 /* Banner + Wrapper (style4) */
-
-	#banner,
-	.wrapper.style4 {
-		background-image: url("../../images/banner.jpg");
-		background-position: center center;
-		background-repeat: no-repeat;
-		background-size: cover;
-		position: relative;
-	}
-
-		#banner:before,
-		.wrapper.style4:before {
-			background: #000000;
-			content: '';
-			height: 100%;
-			left: 0;
-			opacity: 0.5;
-			position: absolute;
-			top: 0;
-			width: 100%;
-		}
-
-		#banner .inner,
-		.wrapper.style4 .inner {
-			position: relative;
-			z-index: 1;
-		}
+/* line 52, ../../sass/ie/v9.scss */
+#banner,
+.wrapper.style4 {
+  background-image: url("../../images/banner.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+/* line 60, ../../sass/ie/v9.scss */
+#banner:before,
+.wrapper.style4:before {
+  background: #000000;
+  content: '';
+  height: 100%;
+  left: 0;
+  opacity: 0.5;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+/* line 71, ../../sass/ie/v9.scss */
+#banner .inner,
+.wrapper.style4 .inner {
+  position: relative;
+  z-index: 1;
+}
 
 /* Banner */
-
-	#banner {
-		padding: 14em 0 12em 0;
-		height: auto;
-	}
-
-		#banner:after {
-			display: none;
-		}
+/* line 79, ../../sass/ie/v9.scss */
+#banner {
+  padding: 14em 0 12em 0;
+  height: auto;
+}
+/* line 83, ../../sass/ie/v9.scss */
+#banner:after {
+  display: none;
+}
 
 /* CTA */
-
-	#cta .inner header {
-		float: left;
-	}
-
-	#cta .inner .actions {
-		float: left;
-	}
-
-	#cta .inner:after {
-		clear: both;
-		content: '';
-		display: block;
-	}
+/* line 92, ../../sass/ie/v9.scss */
+#cta .inner header {
+  float: left;
+}
+/* line 96, ../../sass/ie/v9.scss */
+#cta .inner .actions {
+  float: left;
+}
+/* line 100, ../../sass/ie/v9.scss */
+#cta .inner:after {
+  clear: both;
+  content: '';
+  display: block;
+}
 
 /* Main */
-
-	#main > header {
-		background-image: url("../../images/banner.jpg");
-		background-position: center center;
-		background-repeat: no-repeat;
-		background-size: cover;
-		position: relative;
-	}
-
-		#main > header:before {
-			background: #000000;
-			content: '';
-			height: 100%;
-			left: 0;
-			opacity: 0.5;
-			position: absolute;
-			top: 0;
-			width: 100%;
-		}
-
-		#main > header > * {
-			position: relative;
-			z-index: 1;
-		}
+/* line 111, ../../sass/ie/v9.scss */
+#main > header {
+  background-image: url("../../images/banner.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+}
+/* line 118, ../../sass/ie/v9.scss */
+#main > header:before {
+  background: #000000;
+  content: '';
+  height: 100%;
+  left: 0;
+  opacity: 0.5;
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+/* line 129, ../../sass/ie/v9.scss */
+#main > header > * {
+  position: relative;
+  z-index: 1;
+}
