--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -37,7 +37,8 @@
 
 // Font.
 	$font: (
-		family:				('Open Sans', Helvetica, sans-serif),
+		family:				("Proxima Nova", Helvetica, Arial),
+		family-bold:        ("Proxima Nova Bold", Helvetica, Arial),
 		family-fixed:		('Courier New', monospace),
 		weight:				400,
 		weight-bold:		600,
@@ -56,10 +57,10 @@
 		border2-bg:			rgba(144,144,144,0.5),
 
 		accent1: (
-			bg:				#21b2a6,
-			fg-bold:		#ffffff,
-			fg:				mix(#21b2a6, #ffffff, 25%),
-			fg-light:		mix(#21b2a6, #ffffff, 40%),
+			bg:				#ffffff,//#21b2a6,
+			fg-bold:		#2e3842,//#ffffff,
+			fg:				mix(#2e3842, #ffffff, 25%),
+			fg-light:		mix(#2e3842, #ffffff, 40%),
 			border:			rgba(0,0,0,0.125),
 			border-bg:		rgba(255,255,255,0.075),
 			border2:		rgba(0,0,0,0.25),
