--- a/sass/style.scss
+++ b/sass/style.scss
@@ -205,7 +205,7 @@
 		line-height: 1em;
 		font-style: italic;
 		margin: 0 0 _size(element-margin) 0;
-		padding: 0.1em 0 0.1em 2em;
+		// padding: 0.1em 0 0.1em 2em;
 	}
 
 	blockquote {
