--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1536,8 +1536,8 @@
 			font-family: _font(family-bold);
 			@include vendor('transition', ('transform 0.5s ease', 'opacity 0.5s ease'));
 			display: inline-block;
-			font-size: 3.5em;
-			font-weight: 900;
+			font-size: 4.375rem;
+			font-weight: 500;
 			// letter-spacing: 0.2em;
 			opacity: 1;
 			// padding: 0.35em 1em;
