--- a/css/style.css
+++ b/css/style.css
@@ -2938,10 +2938,6 @@ button:disabled,
 .wrapper.style1 code {
   background: rgba(255, 255, 255, 0.075);
 }
-/* line 1105, ../sass/style.scss */
-.wrapper.style1 header p {
-  color: #abafb3;
-}
 /* line 1110, ../sass/style.scss */
 .wrapper.style1 header.major h2, .wrapper.style1 header.major h3, .wrapper.style1 header.major h4, .wrapper.style1 header.major h5, .wrapper.style1 header.major h6 {
   border-color: rgba(0, 0, 0, 0.125);
@@ -3094,10 +3090,6 @@ button:disabled,
 .wrapper.style3 code {
   background: rgba(255, 255, 255, 0.075);
 }
-/* line 1105, ../sass/style.scss */
-.wrapper.style3 header p {
-  color: #b9bad3;
-}
 /* line 1110, ../sass/style.scss */
 .wrapper.style3 header.major h2, .wrapper.style3 header.major h3, .wrapper.style3 header.major h4, .wrapper.style3 header.major h5, .wrapper.style3 header.major h6 {
   border-color: rgba(0, 0, 0, 0.125);
@@ -3249,10 +3241,6 @@ button:disabled,
 /* line 1098, ../sass/style.scss */
 .wrapper.style5 code {
   background: rgba(0, 0, 0, 0.0375);
-}
-/* line 1105, ../sass/style.scss */
-.wrapper.style5 header p {
-  color: #8E8892;
 }
 /* line 1110, ../sass/style.scss */
 .wrapper.style5 header.major h2, .wrapper.style5 header.major h3, .wrapper.style5 header.major h4, .wrapper.style5 header.major h5, .wrapper.style5 header.major h6 {
@@ -3516,7 +3504,7 @@ body.is-menu-visible #menu {
   -webkit-transition: background-color 0.2s ease;
   -ms-transition: background-color 0.2s ease;
   transition: background-color 0.2s ease;
-  background: #2e3842;
+  background: #fff;
   height: 2em;
   left: 0;
   line-height: 2em;
@@ -3525,8 +3513,9 @@ body.is-menu-visible #menu {
   width: 100%;
   z-index: 10000;
 }
-/* line 1428, ../sass/style.scss */
+/* line 1429, ../sass/style.scss */
 #header h1 {
+  color: #2e3842;
   -moz-transition: opacity 0.2s ease;
   -webkit-transition: opacity 0.2s ease;
   -ms-transition: opacity 0.2s ease;
@@ -3537,7 +3526,7 @@ body.is-menu-visible #menu {
   position: absolute;
   top: 0;
 }
-/* line 1436, ../sass/style.scss */
+/* line 1439, ../sass/style.scss */
 #header h1 a {
   border: 0;
   display: block;
@@ -3545,12 +3534,12 @@ body.is-menu-visible #menu {
   line-height: inherit;
 }
 @media screen and (max-width: 736px) {
-  /* line 1436, ../sass/style.scss */
+  /* line 1439, ../sass/style.scss */
   #header h1 a {
     font-size: 0.8em;
   }
 }
-/* line 1448, ../sass/style.scss */
+/* line 1451, ../sass/style.scss */
 #header nav {
   height: inherit;
   line-height: inherit;
@@ -3558,34 +3547,34 @@ body.is-menu-visible #menu {
   right: 0;
   top: 0;
 }
-/* line 1455, ../sass/style.scss */
+/* line 1458, ../sass/style.scss */
 #header nav > ul {
   list-style: none;
   margin: 0;
   padding: 0;
   white-space: nowrap;
 }
-/* line 1461, ../sass/style.scss */
+/* line 1464, ../sass/style.scss */
 #header nav > ul > li {
   display: inline-block;
   padding: 0;
 }
-/* line 1465, ../sass/style.scss */
+/* line 1468, ../sass/style.scss */
 #header nav > ul > li > a {
   border: 0;
-  color: #2e3842;
+  color: #fff;
   display: block;
   font-size: 0.8em;
   letter-spacing: 0.25em;
   padding: 0 1.5em;
   text-transform: uppercase;
 }
-/* line 1474, ../sass/style.scss */
+/* line 1477, ../sass/style.scss */
 #header nav > ul > li > a.menuToggle {
   outline: 0;
   position: relative;
 }
-/* line 1478, ../sass/style.scss */
+/* line 1481, ../sass/style.scss */
 #header nav > ul > li > a.menuToggle:after {
   background-image: url("images/bars.svg");
   background-position: center right;
@@ -3597,30 +3586,30 @@ body.is-menu-visible #menu {
   width: 2em;
 }
 @media screen and (max-width: 736px) {
-  /* line 1474, ../sass/style.scss */
+  /* line 1477, ../sass/style.scss */
   #header nav > ul > li > a.menuToggle {
     padding: 0 1.5em;
   }
-  /* line 1492, ../sass/style.scss */
+  /* line 1495, ../sass/style.scss */
   #header nav > ul > li > a.menuToggle span {
     display: none;
   }
 }
 @media screen and (max-width: 736px) {
-  /* line 1465, ../sass/style.scss */
+  /* line 1468, ../sass/style.scss */
   #header nav > ul > li > a {
     padding: 0 0 0 1.5em;
   }
 }
-/* line 1503, ../sass/style.scss */
+/* line 1506, ../sass/style.scss */
 #header nav > ul > li:first-child {
   margin-left: 0;
 }
-/* line 1510, ../sass/style.scss */
+/* line 1513, ../sass/style.scss */
 #header.alt {
   background: transparent;
 }
-/* line 1513, ../sass/style.scss */
+/* line 1516, ../sass/style.scss */
 #header.alt h1 {
   -moz-pointer-events: none;
   -webkit-pointer-events: none;
@@ -3628,9 +3617,13 @@ body.is-menu-visible #menu {
   pointer-events: none;
   opacity: 0;
 }
+/* line 1530, ../sass/style.scss */
+#header.alt nav > ul > li > a.menuToggle:after {
+  background-image: url("images/bars-alt.svg");
+}
 
 /* Banner */
-/* line 1522, ../sass/style.scss */
+/* line 1538, ../sass/style.scss */
 #banner {
   display: -moz-flex;
   display: -webkit-flex;
@@ -3651,7 +3644,7 @@ body.is-menu-visible #menu {
   position: relative;
   text-align: center;
 }
-/* line 1534, ../sass/style.scss */
+/* line 1550, ../sass/style.scss */
 #banner h2 {
   font-family: "Proxima Nova Bold", Helvetica, Arial;
   -moz-transition: -moz-transform 0.5s ease, opacity 0.5s ease;
@@ -3666,7 +3659,7 @@ body.is-menu-visible #menu {
   position: relative;
   z-index: 1;
 }
-/* line 1548, ../sass/style.scss */
+/* line 1564, ../sass/style.scss */
 #banner h2 .x {
   color: transparent;
   display: inline;
@@ -3684,7 +3677,7 @@ body.is-menu-visible #menu {
   text-indent: -999em;
   direction: ltr;
 }
-/* line 1566, ../sass/style.scss */
+/* line 1582, ../sass/style.scss */
 #banner h2:before, #banner h2:after {
   -moz-transition-delay: 0.25s;
   -webkit-transition-delay: 0.25s;
@@ -3697,26 +3690,26 @@ body.is-menu-visible #menu {
   position: absolute;
   width: 100%;
 }
-/* line 1577, ../sass/style.scss */
+/* line 1593, ../sass/style.scss */
 #banner h2:before {
   top: 0;
   left: 0;
 }
-/* line 1582, ../sass/style.scss */
+/* line 1598, ../sass/style.scss */
 #banner h2:after {
   bottom: 0;
   right: 0;
 }
-/* line 1588, ../sass/style.scss */
+/* line 1604, ../sass/style.scss */
 #banner p {
   letter-spacing: 0.25em;
   text-transform: uppercase;
 }
-/* line 1592, ../sass/style.scss */
+/* line 1608, ../sass/style.scss */
 #banner p a {
   color: inherit;
 }
-/* line 1597, ../sass/style.scss */
+/* line 1613, ../sass/style.scss */
 #banner .more {
   -moz-transition: -moz-transform 0.75s ease, opacity 0.75s ease;
   -webkit-transition: -webkit-transform 0.75s ease, opacity 0.75s ease;
@@ -3747,7 +3740,7 @@ body.is-menu-visible #menu {
   width: 16em;
   z-index: 1;
 }
-/* line 1618, ../sass/style.scss */
+/* line 1634, ../sass/style.scss */
 #banner .more:after {
   background-image: url("images/arrow.svg");
   background-position: center;
@@ -3762,7 +3755,7 @@ body.is-menu-visible #menu {
   position: absolute;
   width: 1.5em;
 }
-/* line 1634, ../sass/style.scss */
+/* line 1650, ../sass/style.scss */
 #banner:after {
   -moz-pointer-events: none;
   -webkit-pointer-events: none;
@@ -3787,27 +3780,27 @@ body.is-menu-visible #menu {
   opacity: 0;
 }
 @media screen and (max-width: 736px) {
-  /* line 1522, ../sass/style.scss */
+  /* line 1538, ../sass/style.scss */
   #banner {
     padding: 7em 3em 5em 3em;
     height: auto;
     min-height: 0;
   }
-  /* line 1654, ../sass/style.scss */
+  /* line 1670, ../sass/style.scss */
   #banner h2 {
     font-size: 1.25em;
   }
-  /* line 1658, ../sass/style.scss */
+  /* line 1674, ../sass/style.scss */
   #banner br {
     display: none;
   }
-  /* line 1662, ../sass/style.scss */
+  /* line 1678, ../sass/style.scss */
   #banner .more {
     display: none;
   }
 }
 
-/* line 1670, ../sass/style.scss */
+/* line 1686, ../sass/style.scss */
 body.is-loading #banner h2 {
   -moz-transform: scale(0.95);
   -webkit-transform: scale(0.95);
@@ -3815,11 +3808,11 @@ body.is-loading #banner h2 {
   transform: scale(0.95);
   opacity: 0;
 }
-/* line 1674, ../sass/style.scss */
+/* line 1690, ../sass/style.scss */
 body.is-loading #banner h2:before, body.is-loading #banner h2:after {
   width: 0;
 }
-/* line 1679, ../sass/style.scss */
+/* line 1695, ../sass/style.scss */
 body.is-loading #banner .more {
   -moz-transform: translateY(8.5em);
   -webkit-transform: translateY(8.5em);
@@ -3827,13 +3820,13 @@ body.is-loading #banner .more {
   transform: translateY(8.5em);
   opacity: 0;
 }
-/* line 1684, ../sass/style.scss */
+/* line 1700, ../sass/style.scss */
 body.is-loading #banner:after {
   opacity: 1;
 }
 
 /* CTA */
-/* line 1693, ../sass/style.scss */
+/* line 1709, ../sass/style.scss */
 #cta .inner {
   display: -moz-flex;
   display: -webkit-flex;
@@ -3841,7 +3834,7 @@ body.is-loading #banner:after {
   display: flex;
   max-width: 45em;
 }
-/* line 1697, ../sass/style.scss */
+/* line 1713, ../sass/style.scss */
 #cta .inner header {
   -moz-order: 1;
   -webkit-order: 1;
@@ -3850,11 +3843,11 @@ body.is-loading #banner:after {
   padding-right: 3em;
   width: 70%;
 }
-/* line 1702, ../sass/style.scss */
+/* line 1718, ../sass/style.scss */
 #cta .inner header p {
   color: inherit;
 }
-/* line 1707, ../sass/style.scss */
+/* line 1723, ../sass/style.scss */
 #cta .inner .actions {
   -moz-order: 2;
   -webkit-order: 2;
@@ -3863,17 +3856,17 @@ body.is-loading #banner:after {
   width: 30%;
 }
 @media screen and (max-width: 980px) {
-  /* line 1693, ../sass/style.scss */
+  /* line 1709, ../sass/style.scss */
   #cta .inner {
     display: block;
     text-align: center;
   }
-  /* line 1716, ../sass/style.scss */
+  /* line 1732, ../sass/style.scss */
   #cta .inner header {
     padding-right: 0;
     width: 100%;
   }
-  /* line 1721, ../sass/style.scss */
+  /* line 1737, ../sass/style.scss */
   #cta .inner .actions {
     margin-left: auto;
     margin-right: auto;
@@ -3882,14 +3875,14 @@ body.is-loading #banner:after {
   }
 }
 @media screen and (max-width: 736px) {
-  /* line 1730, ../sass/style.scss */
+  /* line 1746, ../sass/style.scss */
   #cta .inner .actions {
     max-width: none;
   }
 }
 
 /* Main */
-/* line 1740, ../sass/style.scss */
+/* line 1756, ../sass/style.scss */
 #main > header {
   padding: 12em 0 10em 0;
   background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../images/banner.jpg");
@@ -3902,13 +3895,13 @@ body.is-loading #banner:after {
   background-size: cover;
   text-align: center;
 }
-/* line 1749, ../sass/style.scss */
+/* line 1765, ../sass/style.scss */
 #main > header h2 {
   font-family: "Proxima Nova Bold", Helvetica, Arial;
   font-size: 4.375rem;
   margin: 0 0 0.5em 0;
 }
-/* line 1754, ../sass/style.scss */
+/* line 1770, ../sass/style.scss */
 #main > header h2 .x {
   width: .5em;
   height: .5em;
@@ -3926,47 +3919,47 @@ body.is-loading #banner:after {
   text-indent: -999em;
   direction: ltr;
 }
-/* line 1773, ../sass/style.scss */
+/* line 1789, ../sass/style.scss */
 #main > header p {
   color: inherit;
   letter-spacing: 0.25em;
   text-transform: uppercase;
   top: 0;
 }
-/* line 1779, ../sass/style.scss */
+/* line 1795, ../sass/style.scss */
 #main > header p a {
   color: inherit;
 }
 @media screen and (max-width: 1680px) {
-  /* line 1740, ../sass/style.scss */
+  /* line 1756, ../sass/style.scss */
   #main > header {
     padding: 10em 0 8em 0;
   }
 }
 @media screen and (max-width: 1280px) {
-  /* line 1740, ../sass/style.scss */
+  /* line 1756, ../sass/style.scss */
   #main > header {
     padding: 8em 3em 6em 3em;
   }
 }
 @media screen and (max-width: 980px) {
-  /* line 1740, ../sass/style.scss */
+  /* line 1756, ../sass/style.scss */
   #main > header {
     padding: 10em 3em 8em 3em;
   }
 }
 @media screen and (max-width: 736px) {
-  /* line 1740, ../sass/style.scss */
+  /* line 1756, ../sass/style.scss */
   #main > header {
     padding: 5em 3em 3em 3em;
   }
-  /* line 1799, ../sass/style.scss */
+  /* line 1815, ../sass/style.scss */
   #main > header h2 {
     font-size: 1.25em;
     margin: 0 0 1em 0;
   }
 }
-/* line 1805, ../sass/style.scss */
+/* line 1821, ../sass/style.scss */
 #main .style2 {
   background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../images/GivJoy/GivJoy3.jpg");
   background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../images/GivJoy/GivJoy3.jpg");
@@ -3974,31 +3967,31 @@ body.is-loading #banner:after {
   background-image: linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../images/GivJoy/GivJoy3.jpg");
 }
 
-/* line 1812, ../sass/style.scss */
+/* line 1828, ../sass/style.scss */
 body.is-mobile #main > header {
   background-attachment: scroll;
 }
 
 /* Footer */
-/* line 1821, ../sass/style.scss */
+/* line 1837, ../sass/style.scss */
 #footer {
   padding: 6em 0 4em 0;
   background-color: #1d242a;
   text-align: center;
 }
-/* line 1826, ../sass/style.scss */
+/* line 1842, ../sass/style.scss */
 #footer .icons {
   font-size: 1.75em;
 }
-/* line 1829, ../sass/style.scss */
+/* line 1845, ../sass/style.scss */
 #footer .icons a {
   color: rgba(255, 255, 255, 0.5);
 }
-/* line 1832, ../sass/style.scss */
+/* line 1848, ../sass/style.scss */
 #footer .icons a:hover {
   color: #fff;
 }
-/* line 1838, ../sass/style.scss */
+/* line 1854, ../sass/style.scss */
 #footer .copyright {
   color: rgba(255, 255, 255, 0.5);
   font-size: 0.5em;
@@ -4007,7 +4000,7 @@ body.is-mobile #main > header {
   padding: 0;
   text-transform: uppercase;
 }
-/* line 1846, ../sass/style.scss */
+/* line 1862, ../sass/style.scss */
 #footer .copyright li {
   border-left: solid 1px rgba(255, 255, 255, 0.5);
   display: inline-block;
@@ -4015,22 +4008,22 @@ body.is-mobile #main > header {
   margin-left: 1em;
   padding-left: 1em;
 }
-/* line 1853, ../sass/style.scss */
+/* line 1869, ../sass/style.scss */
 #footer .copyright li:first-child {
   border-left: 0;
   margin-left: 0;
   padding-left: 0;
 }
-/* line 1859, ../sass/style.scss */
+/* line 1875, ../sass/style.scss */
 #footer .copyright li a {
   color: inherit;
 }
-/* line 1862, ../sass/style.scss */
+/* line 1878, ../sass/style.scss */
 #footer .copyright li a:hover {
   color: #fff;
 }
 @media screen and (max-width: 480px) {
-  /* line 1846, ../sass/style.scss */
+  /* line 1862, ../sass/style.scss */
   #footer .copyright li {
     border: 0;
     display: block;
@@ -4040,20 +4033,20 @@ body.is-mobile #main > header {
   }
 }
 @media screen and (max-width: 980px) {
-  /* line 1821, ../sass/style.scss */
+  /* line 1837, ../sass/style.scss */
   #footer {
     padding: 4em 3em 2em 3em;
   }
 }
 @media screen and (max-width: 736px) {
-  /* line 1821, ../sass/style.scss */
+  /* line 1837, ../sass/style.scss */
   #footer {
     padding: 3em 2em 1em 2em;
   }
 }
 
 /* Landing */
-/* line 1889, ../sass/style.scss */
+/* line 1905, ../sass/style.scss */
 body.landing #page-wrapper {
   background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../images/banner.jpg");
   background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../images/banner.jpg");
@@ -4065,16 +4058,16 @@ body.landing #page-wrapper {
   background-size: cover;
   padding-top: 0;
 }
-/* line 1898, ../sass/style.scss */
+/* line 1914, ../sass/style.scss */
 body.landing #footer {
   background-color: rgba(29, 36, 42, 0.9);
 }
 
-/* line 1905, ../sass/style.scss */
+/* line 1921, ../sass/style.scss */
 body.is-mobile.landing #page-wrapper {
   background: none;
 }
-/* line 1909, ../sass/style.scss */
+/* line 1925, ../sass/style.scss */
 body.is-mobile.landing #banner,
 body.is-mobile.landing .wrapper.style4 {
   background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../images/banner.jpg");
@@ -4085,7 +4078,7 @@ body.is-mobile.landing .wrapper.style4 {
   background-repeat: no-repeat;
   background-size: cover;
 }
-/* line 1917, ../sass/style.scss */
+/* line 1933, ../sass/style.scss */
 body.is-mobile.landing #footer {
   background-color: #1d242a;
 }
